feat: bind WinUI indirect pointer input on JVM